--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
